EasyCreater/deploy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1 
kind: IngressRoute
metadata:
  name: easycreater-ingressroute
  namespace: default # 替换为你的命名空间
spec:
  entryPoints: 
  - web
  routes:
  - match: Host(``) # 替换为你的host
    kind: Rule
    services:
    - name: easycreater-fe
      port: 8080
